--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 		<div class="card mb-4">
 			<div class="card-header bg-primary text-white">Lista Presenças</div>
 			<div class="card-body">
-				<form id="formTarefa">
+				<form id="formPresenca">
 					<div class="mb-3">
 						<label for="nomePresenca" class="form-label">Nome</label>
 						<input type="text" id="nomePresenca" class="form-control" required>
@@ -30,8 +30,8 @@
 						<label for="empresaPresenca" class="form-label">Empresa</label>
 						<input type="text" id="empresaPresenca" class="form-control" required>
 					</div>
-					<button type="button" class="btn btn-success" onclick="adicionarTarefa()">Salvar
-						Tarefa</button>
+					<button type="button" class="btn btn-success" onclick="adicionarPresenca()">Salvar
+						Presença</button>
 				</form>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 		<!-- Lista de presentes -->
 		<div class="card">
 			<div class="card-header bg-dark text-white">Lista dos presentes</div>
-			<ul class="list-group list-group-flush" id="listaTarefas">
+			<ul class="list-group list-group-flush" id="listaPresenca">
 				<!-- Lista serão adicionadas aqui -->
 			</ul>
 		</div>
